[tool.poetry]
name = "robocognisense"
version = "0.1.0"
description = "CARS Robot Cognitive Analysis"
authors = ["krishnachaitanya7 <kkodur@scu.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.6.0"
torchvision = "^0.21.0"
torchaudio = "^2.6.0"
jupyterlab = "^4.3.5"
gspread = "^6.1.4"
pandas = "^2.2.3"
seaborn = "^0.13.2"
scipy = "^1.15.1"
black = {extras = ["jupyter"], version = "^25.1.0"}
tabulate = "^0.9.0"
optuna = "^4.2.0"
plotly = "^6.0.0"
neurokit2 = "^0.2.10"
llvmlite = "^0.44.0"
numpy = "2.1.3"
shap = "^0.46.0"
autoflake = "^2.3.1"
pyqt6 = "^6.8.1"
torchmetrics = "^1.6.1"
torchsampler = "^0.1.2"
transformers = {extras = ["torch"], version = "^4.49.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
